version 11.0.1
date: dd/mm/2022
  * introduced the new access level "EXT" for universal project accessibility
  * fixed several bugs related to the MDR
  * fixed a bug when showing Manchester Expressions in a project having a reasoner configured
  * updated dependency on MAPLE 0.0.12
  * updated dependency on CODA 1.7.6
  * updated dependency on Sheet2RDF 5.0.2

version 11.0
date: 12/05/2022
  * resolved a bug concerning repeated delivery of the same event to event listeners. Among the other issues, this might
    cause the generation of multiple resource metadata
  * added a setting for hiding the stack trace in error responses
  * added a connector to EcoPortal and other catalogs based on OntoPortal
  * introduced SuperUsers
    - allowed SuperUser to create projects and then get the role Project Manager automatically assigned to them.
  * introduced a renewed model for CFs, with a more general management of CCs vs CRs
  * introduced support for Custom Views (CVs) and possibility to match data on specific widgets
  * improved authorization checks on several APIs
  * improved messaging in the update routines
  * added support in Sheet2RDF for DB, with drivers for MySQL, MariaDB and PostgreSQL
  * added support for multiple sheets/tables in Sheet2RDF
  * added the possibility to create distribution downloads of the hosted datasets
  * added a service to suggest SPARQL endpoints in "local federated" queries, i.e. by searching matching repositories hosted on the same
    GraphDB server of the project being queries)
  * added import of general MDR-stored variables (e.g. title of the dataset) into the various metadata vocabulary editors
  * updated dependency on CODA 1.7.5
  * updated dependency on MAPLE 0.0.11
  * updated dependency on Sheet2RDF 5.0.0 (to manage DB tables)
  * updated various dependencies

version 10.2.1
date: 07/02/2022
  * better semantic checks for the Manchester expressions, with the possibility to disable such checks